[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonetint"
version = "0.0.1"
authors = [
  { name="Jan du Plessis", email="drjanduplessis@icloud.com" },
]
description = "A small package to perform sentiment analysis on text and display."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
