[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonetint"
version = "0.0.15"
authors = [
  { name = "Jan du Plessis", email = "drjanduplessis@icloud.com" },
]
description = "ToneTint is a Python package that provides an intuitive way to perform sentiment analysis on text data and visualize the results. It splits the input text into manageable chunks, analyzes each chunk using a pre-trained sentiment analysis model, and highlights the text with background colors corresponding to the sentiment. Additionally, it displays tooltips with detailed sentiment scores when hovering over each text chunk."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "transformers",
  "nltk",
  "ipython",
  "torch",
  "sentencepiece",
  "streamlit",
]

[project.urls]
Homepage = "https://github.com/janduplessis883/tonetint_package"
Issues = "https://github.com/janduplessis883/tonetint_package/issues"
